# tarefa_2_protocolos_de_comunicacao

./: CMakeLists.txt  http_server.c  http_server.h  oled_display.c  oled_display.h  tarefa_2_protocolos_de_comunicacao.c  temperatura.c  temperatura.h
